// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceInDown"
  >
    Dragon Ball
  </h3>
  <div
    className="card__container"
  >
    <GifGridItem
      id={1}
      key="1"
      title="gif1"
      url="https://prueba.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> Debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceInDown"
  >
    Dragon Ball
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    loading
  </p>
  <div
    className="card__container"
  />
</Fragment>
`;
